--- a/src/main/resources/templates/page1.html
+++ b/src/main/resources/templates/page1.html
@@ -4,55 +4,74 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Css.css">
+    <link rel="stylesheet" href="/C.css">
     <title>Title</title>
+    <style>footer {
+        width: 100%;
+        bottom: 0px;
+        background-color: #000;
+        color: #fff;
+        position: absolute;
+        padding-top:20px;
+        padding-bottom:50px;
+        text-align:center;
+        font-size:30px;
+        font-weight:bold;
+    }</style>
 </head>
 <body>
 <div class="topnav">
     <a class="active" href="/page1">Home</a>
-    <a href="/page2">page2</a>
-    <a href="/page3">page3</a>
-    <a href="/page4">page4</a>
-    <a href="/page5">page5</a>
-    <a href="/page6">page6</a>
+    <a href="/page2">About MC Bootcamp</a>
+
 </div>
 <table class="table">
     <thead class="thead-dark">
     <tr>
         <th scope="col">Subjects MC Bootcamp covered</th>
         <th scope="col">Brief Description of Subjects</th>
-        <th scope="col">Meet The Bloggers</th>
+        <th scope="col">Bloggers</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <th scope="row">Github</th>
-        <td>Mark</td>
-        <td>Otto</td>
+        <td>GitHub is a Git repository hosting service, but it adds many of its own features.
+            While Git is a command line tool, GitHub provides a Web-based graphical interface.
+            It also provides access control and several collaboration features,
+            such as a wikis and basic task management tools for every project.  <a href="/page5">View Pam Beasleys blog</a>
+            <a href="/page3">View Michael Scotts blog</a><br /></td>
+
+        <td>Michael Scott<br /></td>
     </tr>
     <tr>
         <th scope="row">Program Design & algorithms</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
+        <td>Algorithm design refers to a method or mathematical process for problem-solving and engineering algorithms.  <a href="/page5">View Pam Beasleys blog</a> <a href="/page6">view Dwight Schrutes blog</a><br /></td>
+        <td>Pam Beasley</td>
     </tr>
     <tr>
         <th scope="row">Core Java</th>
-        <td>Larry</td>
-        <td>the Bird</td>
+        <td>Core Java" is Sun's term, used to refer to Java SE, the standard edition and a set of related technologies,
+            like the Java VM, CORBA, et cetera. This is mostly to differentiate from, say, Java ME or Java EE.
+            Currently Java Core is defined as a following set: Basic technologies.<a href="/page4">Jim Halpert blog</a> <a href="/page6">Dwight Shrutes blog</a></td>
+        <td>Dwight Schrute</td>
     </tr>
     <tr>
         <th scope="row">Object-oriented Java</th>
-        <td>Larry</td>
-        <td>the Bird</td>
+        <td>Object Oriented programming is a programming style which is associated with the concepts like class,
+            object, Inheritance, Encapsulation, Abstraction, Polymorphism.
+            An object-based application in Java is based on declaring classes,
+            creating objects from them and interacting between these objects.  <a href="/page7">Andy Bernards blog</a> <a href="/page4">Jim Halpert blog</a></td>
+        <td>Andy Bernard</td>
     </tr>
     <tr>
         <th scope="row">HTML/CSS/Bootstrap</th>
-        <td>Larry</td>
-        <td>the Bird</td>
+        <td>Front end frameworks that help build user interface components. <a href="/page3">View Michael Scotts blog</a> <a href="/page7">Andy Bernards blog</a></td>
+        <td>Jim Halpert</td>
     </tr>
     </tbody>
 </table>
-
+<footer>Americas Grant Program Affiliate</footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
