--- a/src/main/resources/templates/page7.html
+++ b/src/main/resources/templates/page7.html
@@ -85,29 +85,29 @@
 
 </div>
 <div class="header">
-    <h2>Jim Halperts Blog</h2>
+    <h2>Andy Bernards blog</h2>
 </div>
 
 <div class="row">
     <div class="leftcolumn">
         <div class="card">
-            <h2>Core Java</h2>
+            <h2>Object Oriented Java</h2>
             <h5> Dec 7, 2017</h5>
 
-            <p>Honestly i didnt pay attention to the java im just here to mess with Dwight</p>
+            <p>Well i heard Angela was taking this class so i decided to give it a shot.</p>
         </div>
         <div class="card">
-            <h2>Object Oriented Java</h2>
-            <h5> Sep 2, 2017</h5>
+            <h2>HTML/CSS/BootStrap</h2>
+            <h5>Sep 2, 2017</h5>
 
-            <p>Again, didnt pay attention just wanted to laugh at Dwight</p>
+            <p>These things are good and all but i really just wanna see Angela</p>
         </div>
     </div>
     <div class="rightcolumn">
         <div class="card">
-            <h2>About Jim</h2>
-            <div> <img src="https://i.pinimg.com/originals/3a/1d/23/3a1d236ab5cafa26d0a56bc60f5d2fde.jpg" style="width:250px;height:300px;"></div>
-            <p>Jim Halpert.  love picking on Dwight.  good at basketball.</p>
+            <h2>About Andy Bernard</h2>
+            <div> <img src="http://images.nymag.com/images/2/daily/2010/01/20100121_andy_190x190.jpg" style="width:240px;height:200px;"> </div>
+            <p>Andy Bernard.  Cornell graduate.  looking to have a good time.</p>
         </div>
         <div class="card">
             <h3>follow me on social media</h3>
@@ -116,11 +116,12 @@
             <div> <a href="https://www.instagram.com/"><img src="http://pluspng.com/img-png/instagram-png-instagram-png-logo-1455.png" style="width:50px; height:50px" title="instagram" alt="instagram"></a> </div><br>
         </div>
         <div class="card">
-            <h3>Thats all folks</h3>
+            <h3>Thank you for stopping by</h3>
 
         </div>
     </div>
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
